--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Guess the Word!</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
     <!--Header Navigation bar-->
@@ -29,155 +30,156 @@
         <div id="main" class="container">
 
             <!--Rows-->
-            <div id="guesses" class="container">
+            <div id="guesses" class="container" style="width: 400px; height: 420px;">
                 <div class="row justify-content-center">
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold">W</div>
+                        <div class="letter-box font-weight-bold current">
+                            <span id="entered"></span>
+                        </div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold">O</div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold">R</div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold">D</div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold">S</div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
-                    </div>
-                    <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
-                    </div>
-                    <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
-                    </div>
-                    <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
-                    </div>
-                    <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
-                    </div>
-                    <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
-                    </div>
-                    <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
-                    </div>
-                    <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
-                    </div>
-                    <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                     <div class="col-2">
-                        <div class="letter-box font-weight-bold"></div>
+                        <div class="letter-box font-weight-bold unfilled"></div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-2">
+                        <div class="letter-box font-weight-bold unfilled"></div>
+                    </div>
+                    <div class="col-2">
+                        <div class="letter-box font-weight-bold unfilled"></div>
+                    </div>
+                    <div class="col-2">
+                        <div class="letter-box font-weight-bold unfilled"></div>
+                    </div>
+                    <div class="col-2">
+                        <div class="letter-box font-weight-bold unfilled"></div>
+                    </div>
+                    <div class="col-2">
+                        <div class="letter-box font-weight-bold unfilled"></div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-2">
+                        <div class="letter-box font-weight-bold unfilled"></div>
+                    </div>
+                    <div class="col-2">
+                        <div class="letter-box font-weight-bold unfilled"></div>
+                    </div>
+                    <div class="col-2">
+                        <div class="letter-box font-weight-bold unfilled"></div>
+                    </div>
+                    <div class="col-2">
+                        <div class="letter-box font-weight-bold unfilled"></div>
+                    </div>
+                    <div class="col-2">
+                        <div class="letter-box font-weight-bold unfilled"></div>
                     </div>
                 </div>
             </div>
-    
-            <!--Keyboard-->
-            <div id="keyboard" class="container btn-group-wrap fixed-bottom">
-                <div class="btn-group" role="group" aria-label="Row 1">
-                    <button type="button" class="btn btn-secondary">Q</button>
-                    <button type="button" class="btn btn-secondary">W</button>
-                    <button type="button" class="btn btn-secondary">E</button>
-                    <button type="button" class="btn btn-secondary">R</button>
-                    <button type="button" class="btn btn-secondary">T</button>
-                    <button type="button" class="btn btn-secondary">Y</button>
-                    <button type="button" class="btn btn-secondary">U</button>
-                    <button type="button" class="btn btn-secondary">I</button>
-                    <button type="button" class="btn btn-secondary">O</button>
-                    <button type="button" class="btn btn-secondary">P</button>
-                </div>
-                <div class="btn-group" role="group" aria-label="Row 2">
-                    <button type="button" class="btn btn-secondary">A</button>
-                    <button type="button" class="btn btn-secondary">S</button>
-                    <button type="button" class="btn btn-secondary">D</button>
-                    <button type="button" class="btn btn-secondary">F</button>
-                    <button type="button" class="btn btn-secondary">G</button>
-                    <button type="button" class="btn btn-secondary">H</button>
-                    <button type="button" class="btn btn-secondary">J</button>
-                    <button type="button" class="btn btn-secondary">K</button>
-                    <button type="button" class="btn btn-secondary">L</button>
-                </div>
-                <div class="btn-toolbar" role="toolbar" aria-label="Row 3">
-                    <div class="btn-group" role="group" aria-label="Enter">
-                      <button type="button" class="btn btn-secondary">Enter</button>
-                    </div>
-                    <div class="btn-group" role="group" aria-label="Row 3">
-                      <button type="button" class="btn btn-secondary">Z</button>
-                      <button type="button" class="btn btn-secondary">X</button>
-                      <button type="button" class="btn btn-secondary">C</button>
-                      <button type="button" class="btn btn-secondary">V</button>
-                      <button type="button" class="btn btn-secondary">B</button>
-                      <button type="button" class="btn btn-secondary">N</button>
-                      <button type="button" class="btn btn-secondary">M</button>
-                    </div>
-                    <div class="btn-group" role="group" aria-label="Delete">
-                      <button type="button" class="btn btn-secondary">Delete</button>
-                    </div>
-                  </div>
+        </div>
+
+        <!--Keyboard-->
+        <div id="keyboard" class="container btn-group-wrap">
+            <div class="btn-group" role="group" aria-label="Row 1">
+                <button type="button" class="btn btn-secondary">Q</button>
+                <button type="button" class="btn btn-secondary">W</button>
+                <button type="button" class="btn btn-secondary">E</button>
+                <button type="button" class="btn btn-secondary">R</button>
+                <button type="button" class="btn btn-secondary">T</button>
+                <button type="button" class="btn btn-secondary">Y</button>
+                <button type="button" class="btn btn-secondary">U</button>
+                <button type="button" class="btn btn-secondary">I</button>
+                <button type="button" class="btn btn-secondary">O</button>
+                <button type="button" class="btn btn-secondary">P</button>
             </div>
-    
+            <div class="btn-group" role="group" aria-label="Row 2">
+                <button type="button" class="btn btn-secondary">A</button>
+                <button type="button" class="btn btn-secondary">S</button>
+                <button type="button" class="btn btn-secondary">D</button>
+                <button type="button" class="btn btn-secondary">F</button>
+                <button type="button" class="btn btn-secondary">G</button>
+                <button type="button" class="btn btn-secondary">H</button>
+                <button type="button" class="btn btn-secondary">J</button>
+                <button type="button" class="btn btn-secondary">K</button>
+                <button type="button" class="btn btn-secondary">L</button>
+            </div>
+            <div class="btn-toolbar" role="toolbar" aria-label="Row 3">
+                <div class="btn-group" role="group" aria-label="Enter">
+                  <button type="button" class="btn btn-secondary">Enter</button>
+                </div>
+                <div class="btn-group" role="group" aria-label="Row 3">
+                  <button type="button" class="btn btn-secondary">Z</button>
+                  <button type="button" class="btn btn-secondary">X</button>
+                  <button type="button" class="btn btn-secondary">C</button>
+                  <button type="button" class="btn btn-secondary">V</button>
+                  <button type="button" class="btn btn-secondary">B</button>
+                  <button type="button" class="btn btn-secondary">N</button>
+                  <button type="button" class="btn btn-secondary">M</button>
+                </div>
+                <div class="btn-group" role="group" aria-label="Delete">
+                  <button type="button" class="btn btn-secondary">Delete</button>
+                </div>
+              </div>
         </div>
     </div>
 
