Added functionality to html keyboard

--- a/index.html
+++ b/index.html
@@ -141,43 +141,43 @@
         <!--Keyboard-->
         <div id="keyboard" class="container btn-group-wrap">
             <div class="btn-group" role="group" aria-label="Row 1">
-                <button type="button" class="btn btn-secondary">Q</button>
-                <button type="button" class="btn btn-secondary">W</button>
-                <button type="button" class="btn btn-secondary">E</button>
-                <button type="button" class="btn btn-secondary">R</button>
-                <button type="button" class="btn btn-secondary">T</button>
-                <button type="button" class="btn btn-secondary">Y</button>
-                <button type="button" class="btn btn-secondary">U</button>
-                <button type="button" class="btn btn-secondary">I</button>
-                <button type="button" class="btn btn-secondary">O</button>
-                <button type="button" class="btn btn-secondary">P</button>
+                <button id="qButton" type="button" class="btn btn-secondary">Q</button>
+                <button id="wButton" type="button" class="btn btn-secondary">W</button>
+                <button id="eButton" type="button" class="btn btn-secondary">E</button>
+                <button id="rButton" type="button" class="btn btn-secondary">R</button>
+                <button id="tButton" type="button" class="btn btn-secondary">T</button>
+                <button id="yButton" type="button" class="btn btn-secondary">Y</button>
+                <button id="uButton" type="button" class="btn btn-secondary">U</button>
+                <button id="iButton" type="button" class="btn btn-secondary">I</button>
+                <button id="oButton" type="button" class="btn btn-secondary">O</button>
+                <button id="pButton" type="button" class="btn btn-secondary">P</button>
             </div>
             <div class="btn-group" role="group" aria-label="Row 2">
-                <button type="button" class="btn btn-secondary">A</button>
-                <button type="button" class="btn btn-secondary">S</button>
-                <button type="button" class="btn btn-secondary">D</button>
-                <button type="button" class="btn btn-secondary">F</button>
-                <button type="button" class="btn btn-secondary">G</button>
-                <button type="button" class="btn btn-secondary">H</button>
-                <button type="button" class="btn btn-secondary">J</button>
-                <button type="button" class="btn btn-secondary">K</button>
-                <button type="button" class="btn btn-secondary">L</button>
+                <button id="aButton" type="button" class="btn btn-secondary">A</button>
+                <button id="sButton" type="button" class="btn btn-secondary">S</button>
+                <button id="dButton" type="button" class="btn btn-secondary">D</button>
+                <button id="fButton" type="button" class="btn btn-secondary">F</button>
+                <button id="gButton" type="button" class="btn btn-secondary">G</button>
+                <button id="hButton" type="button" class="btn btn-secondary">H</button>
+                <button id="jButton" type="button" class="btn btn-secondary">J</button>
+                <button id="kButton" type="button" class="btn btn-secondary">K</button>
+                <button id="lButton" type="button" class="btn btn-secondary">L</button>
             </div>
             <div class="btn-toolbar" role="toolbar" aria-label="Row 3">
                 <div class="btn-group" role="group" aria-label="Enter">
-                  <button type="button" class="btn btn-secondary">Enter</button>
+                  <button id="enterButton" type="button" class="btn btn-secondary">Enter</button>
                 </div>
                 <div class="btn-group" role="group" aria-label="Row 3">
-                  <button type="button" class="btn btn-secondary">Z</button>
-                  <button type="button" class="btn btn-secondary">X</button>
-                  <button type="button" class="btn btn-secondary">C</button>
-                  <button type="button" class="btn btn-secondary">V</button>
-                  <button type="button" class="btn btn-secondary">B</button>
-                  <button type="button" class="btn btn-secondary">N</button>
-                  <button type="button" class="btn btn-secondary">M</button>
+                  <button id="zButton" type="button" class="btn btn-secondary">Z</button>
+                  <button id="xButton" type="button" class="btn btn-secondary">X</button>
+                  <button id="cButton" type="button" class="btn btn-secondary">C</button>
+                  <button id="vButton" type="button" class="btn btn-secondary">V</button>
+                  <button id="bButton" type="button" class="btn btn-secondary">B</button>
+                  <button id="nButton" type="button" class="btn btn-secondary">N</button>
+                  <button id="mButton" type="button" class="btn btn-secondary">M</button>
                 </div>
                 <div class="btn-group" role="group" aria-label="Delete">
-                  <button type="button" class="btn btn-secondary">Delete</button>
+                  <button id="deleteButton" type="button" class="btn btn-secondary">Delete</button>
                 </div>
               </div>
         </div>
