--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
             </div>
         </div>
 
-        <div id="alertspace">
-            
-        </div>
+        <div id="alertspace"></div>
 
         <!--Keyboard-->
         <div id="keyboard" style="width: 450px;">
